// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Komponen Input testing snapshot pada keadaan default 1`] = `
<DocumentFragment>
  <input
    class="bg-white dark:bg-[#262626] border border-gray-300 dark:border-[#0D0D0D] text-gray-800 dark:text-[#F2F2F2] placeholder-gray-400 dark:placeholder-[#808080] focus:outline-none focus:ring-2 focus:ring-[#1E6F9F] shadow-sm text-base px-4 py-4 rounded-lg flex-1 transition-colors "
    placeholder="Tambah tugas baru..."
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`Komponen Input testing snapshot saat memiliki teks dan custom class 1`] = `
<DocumentFragment>
  <input
    class="bg-white dark:bg-[#262626] border border-gray-300 dark:border-[#0D0D0D] text-gray-800 dark:text-[#F2F2F2] placeholder-gray-400 dark:placeholder-[#808080] focus:outline-none focus:ring-2 focus:ring-[#1E6F9F] shadow-sm text-base px-4 py-4 rounded-lg flex-1 transition-colors margin-top-10 border-red-500"
    placeholder="Tambah tugas baru..."
    type="text"
    value="Belajar Snapshot"
  />
</DocumentFragment>
`;
